--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "ansible-postgresql"]
 	path = ansible-postgresql
-	url = git@github.com:dleehr/ansible-postgresql.git
+	url = https://github.com/dleehr/ansible-postgresql.git
