--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -16,6 +16,7 @@ Vagrant.configure("2") do |config|
 
   config.vm.provision "ansible" do |ansible|
     ansible.inventory_path = "vagrant_inventory"
+    ansible.limit = 'all'
     ansible.playbook = "../ansible-postgresql/setup.yml"
     ansible.sudo = true
     ansible.host_key_checking = false
