--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -15,7 +15,10 @@ Vagrant.configure("2") do |config|
   config.vm.network :forwarded_port, guest: 8000, host: 8010
 
   config.vm.provision "ansible" do |ansible|
-    ansible.inventory_path = "vagrant_inventory"
+    ansible.groups = {
+      "postgresql_servers" => ["default"],
+      "dplace_servers" => ["default"]
+    }
     ansible.limit = 'all'
     ansible.playbook = "../ansible-postgresql/setup.yml"
     ansible.sudo = true
